Updated the html and css
I mostly changed the text and content on the html and I updated some transitions

--- a/index.html
+++ b/index.html
@@ -14,39 +14,21 @@
       </header>
       <main>
         <section class="slide-up">
-          <h2>Security & Stability</h2>
+          <h2>Sense of Security</h2>
           <p>
-            Borders serve as the first line of defense against external threats,
-            ensuring the safety of a nation’s citizens. They enable law
-            enforcement agencies to regulate movement, enforce laws, and prevent
-            criminal activities such as smuggling and trafficking. Moreover,
-            strong borders create stability by maintaining a structured
-            governance framework that protects the rights of individuals within
-            a country.
+            Borders provide people with a sense of security as the border's gives physical protection and they are associated with the law so they are governed. Borders act as a physical boundary that helps prevent unauthorized access from the neighboring countries. This may make people feel safer by reducing the risk of outside threats. As the border is heavily guarded in most places with border patrol and border agents that control who enters the country. This can make people feel more secure because they know there are rules on who can enter the country, not allowing bad people to enter.
           </p>
         </section>
         <section class="slide-up delay">
           <h2>National Identity</h2>
           <p>
-            A well-defined border fosters a sense of belonging among citizens by
-            establishing a shared cultural and historical identity. Borders help
-            maintain the traditions, language, and values unique to a nation,
-            ensuring that its heritage is preserved for future generations. This
-            sense of identity strengthens national unity and pride, promoting
-            social cohesion and patriotism.
+            Borders can help define a nation's physical and culturl boundaries. This can contribute to a shared sense of belonging among the country. They create distinctions between groups, this often results in national pride and unity with these boundaries. By setting a certain border, it reinforeces a certain identity within the border that have the same histoy, culture, language and traditions.
           </p>
         </section>
         <section class="slide-up delay-more">
-          <h2>Economic and Social Order</h2>
+          <h2>Stability and Order</h2>
           <p>
-            Controlled borders play a crucial role in regulating the flow of
-            goods, services, and people. They help manage immigration policies,
-            ensuring that resources are distributed efficiently to support
-            sustainable growth. Secure borders also facilitate international
-            trade, allowing governments to impose fair tariffs and protect
-            domestic industries from economic disruptions. Additionally, they
-            provide a framework for managing public services such as healthcare
-            and education, preventing strain on national infrastructure.
+            Borders help to bring stability by demarcating where a government of a country has authority. This avoids border conflicts and makes it easier for the government to enforce laws, provide services, and maintain order. With defined borders, countries can control resources and determine who comes in or goes out. Borders also help countries to peacefully cooperate through diplomacy, and concerns like trade, security, and migration become more manageable.
           </p>
         </section>
       </main>
